# Cadmium

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: deploy.yml
cmake/: dependencies.cmake  helpers.cmake  imgui.cmake  lua.cmake
engine/: CMakeLists.txt
engine/include/cadmium/assets/: asset_manager.hpp  asset_types.hpp
engine/include/cadmium/core/: application.hpp  assets.hpp  draw_command_queue.hpp  engine.hpp  engine_context.hpp  event_bus.hpp  imgui_layer.hpp  input_manager.hpp  layer.hpp  layer_stack.hpp  logger.hpp  scene.hpp  scene_manager.hpp  timer.hpp
engine/include/cadmium/ecs/: component_id.hpp  components.hpp  entity.hpp  lua_component.hpp  registry.hpp  sparse_set.hpp  system.hpp  system_scheduler.hpp  world.hpp
engine/include/cadmium/editor/: asset_panel.hpp  console_panel.hpp  editor_overlay_layer.hpp  editor_state.hpp  imgui_asset_panel.hpp  render_viewport.hpp  script_editor_panel.hpp  scriptbuffer.hpp  toolbar_panel.hpp  viewport_panel.hpp
engine/include/cadmium/scripting/: entity_registry.hpp  lua_bindings.hpp  lua_bindings_assets.hpp  lua_bindings_components.hpp  lua_bindings_entity.hpp  lua_type_registry.hpp  script_controller.hpp  script_host.hpp  script_render_layer.hpp  script_update_layer.hpp  scripted_scene.hpp
engine/src/assets/: asset_manager.cpp
engine/src/core/: assets.cpp  engine.cpp  event_bus.cpp  imgui_layer.cpp  input_manager.cpp  layer.cpp  layer_stack.cpp  logger.cpp  scene.cpp  scene_manager.cpp  timer.cpp
engine/src/scripting/: lua_bindings.cpp  script_host.cpp  scripted_scene.cpp
sandbox/: CMakeLists.txt
sandbox/assets/: test.txt
sandbox/assets/scripts/: main.lua
sandbox/include/: asteroids_scene.hpp  components.hpp  debris_system.hpp  debug_overlay.hpp  entities.hpp  events.hpp  game_state.hpp  hud_layer.hpp  menu_events.hpp  menu_layer.hpp  menu_scene.hpp  movement_system.hpp  render_layer.hpp  stress_debug_overlay.hpp  stress_render_layer.hpp  stress_scene.hpp  world_layer.hpp
sandbox/src/: asteroids_scene.cpp  debug_overlay.cpp  hud_layer.cpp  main.cpp  menu_layer.cpp  menu_scene.cpp  render_layer.cpp  stress_debug_overlay.cpp  stress_render_layer.cpp  stress_scene.cpp  world_layer.cpp
tests/: CMakeLists.txt
tests/engine/: test_engine.cpp  test_layer_stack.cpp  test_timer.cpp
